# parking-problem

./: .env  README.md  main.py  pyproject.toml
datasets/: README.md  instances.json
datasets/adaptada/: bp20_first_15.json
datasets/disponibilizada/: figure_2_1.json
datasets/gerada/: heavy_bimodal_100.json  heavy_narrow_200.json  heavy_uniform_50.json
reports/: cover.tex  parking_problem_report.md  solver_comparison.csv  solver_comparison.md
scripts/: append_results_table.py  generate_instances.py  generate_latex_report.py  generate_methodology_report.py  generate_pdf_report.py  generate_report.py  markdown_to_pdf.py  markdown_to_pdf_reportlab.py  md_to_latex_full.py  plot_from_logs.py  plot_report.py
src/parking_problem/: __init__.py  __main__.py  cli.py  solver_main.py  validator.py
src/parking_problem/solvers/: base.py  solver_ortools.py  solver_pulp.py  solver_pyomo.py
tests/: conftest.py  test_all_instances_all_solvers.py  test_all_instances_one_solver.py  test_instance1_all_solvers.py  utils.py
